--- a/maintenance_field_service/views/views.xml
+++ b/maintenance_field_service/views/views.xml
@@ -19,6 +19,7 @@
                         </group>
                         <group>
                             <field name="equipment_id"/>
+                            <field name="request_date"/>
                         </group>
 
                     </group>
