--- a/maintenance_field_service/views/views.xml
+++ b/maintenance_field_service/views/views.xml
@@ -75,8 +75,8 @@
               <xpath expr="//button[@name='action_view_invoice']" position="before">
                     <field name="installation_ids" invisible="1"/>
                     <button type="object" name="action_view_delivery" class="oe_stat_button"
-                            icon="fa-truck" attrs="{'invisible': [('delivery_count', '=', 0)]}" groups="base.group_user">
-                        <field name="delivery_count" widget="statinfo" string="Installation"/>
+                            icon="fa-truck" attrs="{'invisible': [('installation_count', '=', 0)]}" groups="base.group_user">
+                        <field name="installation_count" widget="statinfo" string="Installation"/>
                     </button>
                 </xpath>
           </field>
