--- a/maintenance_field_service/views/views.xml
+++ b/maintenance_field_service/views/views.xml
@@ -22,6 +22,7 @@
                         </div>
                         <group>
                             <field name="partner_id"/>
+                            <field name="sale_id"/>
                         </group>
                         <group>
                             <field name="equipment_id"/>
