--- a/maintenance_field_service/views/product_template.xml
+++ b/maintenance_field_service/views/product_template.xml
@@ -19,7 +19,7 @@
                     <page name="maintenance" string="Maintenance">
                         <field name="part_ids">
                             <tree editable="top">
-                                <field name="product_id"/>
+                                <field name="part_id"/>
                                 <field name="qty_time"/>
                                 <field name="period_time"/>
                             </tree>
